# EUReCA

./: .gitignore  .readthedocs.yaml  EUReCA_requirements.txt  LICENSE  MANIFEST.in  Main.py  Main_test_DHW.py  RC.yml  README.md  eureca.yml  eureca_bis.yml  eureca_linux.yml  eureca_mod.yml  pyproject.toml  requirements.txt  requirements_eureca.txt  requirements_pip.txt  setup.py  untitled2.py  xlsxmaker.py  your_file.xlsx
Input/: Envelopes.xlsx  PaduaRestricted.json  PiovegoRestricted.geojson  PiovegoRestricted_with_holes.geojson  ScheduleComp.xlsx  ScheduleSemp.xlsx  SimInput  SimInput.xlsx
OutputReport/: warnings.txt
RC_classes/: AHU.py  BuildingsPlants.py  City.py  CityJSON.py  CityJSON_mod_multiprocessing.py  City_mod_multiproc.py  Climate.py  Climate_rev_v1.py  DHW.py  EndUse.py  Envelope.py  Geometry.py  IrradiancePreProcessor.py  PVPlant.py  RSMDef.py  Simulation.py  WeatherData.py  auxiliary_functions.py  thermalZone.py
docs/: eureca_building.rst  eureca_modelica_classes.rst  eureca_ubem.rst  how_to_build_documentation.txt  modules.rst  requirements.txt
docs2/: eureca_building.rst  modules.rst
eureca/: pyvenv.cfg
eureca-ubem/: Climate.py  PVPlant.py
eureca_building/: PV_system.py  SolarThermal.py  _VDI6007_auxiliary_functions.py  _auxiliary_function_for_monthly_calc.py  _geometry_auxiliary_functions.py  air_handling_unit.py  building.py  config.json  config.py  construction.py  construction_dataset.py  default_config.ini  domestic_hot_water.py  exceptions.py  fluids_properties.py  internal_load.py  logs.py  material.py  pv_system.py  schedule.py  (+14 more)
(+2337 files in other folders)
